Set release date for 0.20.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5514 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * New release: Geany 0.20 "Disra".
+
+
 2011-01-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/plugins.c:
