--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Geany 0.20 (t.b.d.s)
+Geany 0.20 (January 5, 2011)
 
     Bugs:
     * Improve compatibility with GVFS using GIO to save documents (Alexey
