--- a/NEWS
+++ b/NEWS
@@ -125,7 +125,7 @@ Geany 0.20 (January 5, 2011)
 
     Internationalisation:
     * Add translations: kk.
-    * Update translations: cs, de, de, en_GB, es, fi, fr, hu, ja, nl, pt,
+    * Update translations: cs, de, en_GB, es, fi, fr, hu, ja, nl, pt,
                            sl, sv, tr, zh_CN.
 
     Manual:
