no need to update Manual wiki page now. update current/hacking.html.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5517 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 Geany 0.20 (January 5, 2011)
 
-    Bugs:
+    Fixes:
     * Improve compatibility with GVFS using GIO to save documents (Alexey
       Antipov).
     * Fix crash when closing a modified document (usually without a
