Add Save As toolbar button option (patch by Matthew Brush, thanks; #3153490).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5518 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-01-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/toolbar.c, src/ui_utils.c:
+   Add Save As toolbar button option (patch by Matthew Brush, thanks;
+   #3153490).
+
+
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * New release: Geany 0.20 "Disra".
