Thanks to Matthew Brush.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5519 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2011-01-10  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
- * src/toolbar.c, src/ui_utils.c:
+ * src/toolbar.c, src/ui_utils.c, src/about.c, THANKS:
    Add Save As toolbar button option (patch by Matthew Brush, thanks;
    #3153490).
 
