Update of Brasilian Portuguese translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5523 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,14 @@
+2011-01-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * pt_BR.po: Update of Brasilian Portuguese translation.
+             Thanks to Rafael Peregrino da Silva.
+
+
+2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * New release: Geany 0.20 "Disra".
+
+
 2011-01-04  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * it.po: Small update of Italian translation. Fixes #3147995
