--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-01-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * pt_BR.po: Update of Brasilian Portuguese translation.
+             Thanks to Rafael Peregrino da Silva.
+
+
 2011-01-10  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * pt_BR.po: Update of Brasilian Portuguese translation.
