Add '.pyc' to the list of hidden object files (patch by Filip Gruszczyński, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5530 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-01-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * plugins/filebrowser.c:
+   Add '.pyc' to the list of hidden object files
+   (patch by Filip Gruszczyński, thanks).
+
+
 2011-01-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * *.*:
