Fix memory leaks (reported by an anonymous IRC user).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5535 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * tagmanager/php.c:
+   Fix memory leaks (reported by an anonymous IRC user).
+
+
 2011-01-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/editor.c:
