Replace '+' by '-' in the Scintilla Keybindings section to be consistent with the other mentioned keybindings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5536 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * tagmanager/php.c:
    Fix memory leaks (reported by an anonymous IRC user).
+ * doc/geany.txt, doc/geany.html:
+   Replace '+' by '-' in the Scintilla Keybindings section
+   to be consistent with the other mentioned keybindings.
 
 
 2011-01-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
