Add a warning if writing the project file fails on close.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5538 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
  * src/project.c:
    Improve error checking when trying to write project files
    (patch by Colomban Wendling, thanks).
+   Add a warning if writing the project file fails on close.
 
 
 2011-01-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
