Fix detecting Matlab and Txt2Tags extensions by default.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5541 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-02-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * data/filetype_extensions.conf:
+   Fix detecting Matlab and Txt2Tags extensions by default.
+
+
 2011-02-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * tagmanager/latex.c:
