Add support for multiple file filters, separated by semicolon (based on a patch by Grigory Javadyan, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5543 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-02-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * plugins/filebrowser.c:
+   Add support for multiple file filters, separated by semicolon
+   (based on a patch by Grigory Javadyan, thanks).
+
+
 2011-02-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * data/filetype_extensions.conf:
