Fix wrong warning on empty backup directory setting if 'Backup Copy' is not enabled at all.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5551 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * plugins/saveactions.c:
+   Fix wrong warning on empty backup directory setting if
+   'Backup Copy' is not enabled at all.
+
+
 2011-02-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/templates.c:
