Welcome Colomban Wendling, a new Geany developer.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5552 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ Developers:
 -----------
 
 Nick Treleaven <nick(dot)treleaven(at)btinternet(dot)com>
+Colomban Wendling <lists(dot)ban(at)herbesfolles(dot)org>
 Enrico Troeger <enrico(dot)troeger(at)uvena(dot)de>
 Frank Lanitz <frank(at)frank(dot)uvena(dot)de>
 
