Remember Find and Replace options across restarts (patch by Dimitar Zhekov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5573 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/interface.c, geany.glade:
    Fix typo.
+ * src/search.c:
+   Remember Find and Replace options across restarts
+   (patch by Dimitar Zhekov, thanks).
 
 
 2011-03-05  Colomban Wendling  <colomban(at)geany(dot)org>
