Add option to insert line numbers (closes #3197150).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5576 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
    Cleanup.
    Respect saved state of 'Case sensitive' option when using
    the 'Regular expressions' option as well.
+ * plugins/export.c:
+   Add option to insert line numbers (closes #3197150).
 
 
 2011-03-05  Colomban Wendling  <colomban(at)geany(dot)org>
