--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,7 @@
    the 'Regular expressions' option as well.
  * plugins/export.c:
    Add option to insert line numbers (closes #3197150).
+   Cleanup.
 
 
 2011-03-05  Colomban Wendling  <colomban(at)geany(dot)org>
