Use the full filename and add the extension of the export format.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5579 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@
  * plugins/export.c:
    Add option to insert line numbers (closes #3197150).
    Cleanup.
+   Use the full filename and add the extension of the export format.
 
 
 2011-03-05  Colomban Wendling  <colomban(at)geany(dot)org>
