Update of German translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5582 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2011-03-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Update of German translation.
+
+
 2011-01-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
- * vi.po: Update of Vietnamese translation. Thanks to Nguyễn Hồng Quân. 
+ * vi.po: Update of Vietnamese translation. Thanks to Nguyễn Hồng Quân.
 
 
 2011-01-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
