Import upstream MIO changes not to require a C99 compiler
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5583 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-07  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * tagmanager/mio/mio-memory.c:
+   Import upstream MIO changes not to require a C99 compiler.
+
+
 2011-03-06  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/symbols.c:
