--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/geany.h:
+   Fix wrong code example in the API docs
+   (spotted by Matthew Brush, thanks).
+
+
 2011-03-07  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * tagmanager/mio/mio-memory.c:
