--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-10  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/toolbar.c:
+   Correctly expand the menubar if the toolbar is appended to it but
+   not visible (closes #3204955).
+
+
 2011-03-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/geany.h:
