Prefer prepend elements to lists rather than append them
This is for better performances since appending to a list means walking
it to find the last element to append to. When the list ordering
matters, simply reverse the list after prepengins.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5586 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@
  * src/toolbar.c:
    Correctly expand the menubar if the toolbar is appended to it but
    not visible (closes #3204955).
+ * plugins/filebrowser.c, src/editor.c, src/plugins.c, src/symbols.c,
+   src/tools.c, src/utils.c:
+   Prefer prepend elements to lists rather than append them, for better
+   performances.
 
 
 2011-03-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
