Update of traditionel Chinese translation. Thanks to Wei-Lun Chao
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5587 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * zh_TW.po: Update of traditional Chinese translation.
+             Thanks to Wei-Lun Chao for providing update.
+
+
 2011-03-06  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * de.po: Update of German translation.
