--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/filetype_extensions.conf:
+   Add Markdown extension.
+
+
 2011-03-10  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/toolbar.c:
