Restore sorting order of plugins configuration tabs (broke by me in r5586)
Now simply insert elements in sorted order rather than sorting the
list at a later point: it's simpler, cleaner and probably faster.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5591 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * src/templates.c, src/templates.h:
    Use the same indentation for all templates (part of FR#3193527; from
    a patch by Matthew Brush, thanks).
+ * src/plugins.c:
+   Always keep the list of loaded plugin sorted by name.
 
 
 2011-03-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
