Addded Wei-Lun Chao as current maintainer for traditional Chinese as well as to THANKS file
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5593 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/THANKS
+++ b/THANKS
@@ -145,6 +145,7 @@ Clytie Siddall <clytie(at)riverland(dot)net(dot)au> - vi_VN
 Dormouse Young <mouselinux(at)163(dot)com> - zh_CN
 Xhacker Liu <liu.dongyuan(at)gmail(dot)com> - zh_CN
 KoViCH <kovich(dot)ian(at)gmail(dot)com> - zh_TW
+Wei-Lun Chao <chaoweilun(at)gmail(dot)com> - zh_TW
 
 Projects:
 ---------
