--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * THANKS, src/about.c:
+   Adding Wei-Lun Chao as current maintainer for traditional Chinese
+   translation.
+
+
 2011-03-15  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/templates.c, src/templates.h:
