Support copying filetype definition file group keys from a system keyfile with e.g. [styling=C]. Add function utils_make_filename() for building filenames easily.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5596 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-03-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c, src/utils.h, src/filetypes.c:
+   Support copying filetype definition file group keys from a system
+   keyfile with e.g. [styling=C].
+   Add function utils_make_filename() for building filenames easily.
+
+
 2011-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * THANKS, src/about.c:
