Undo patch change to cc_option_label_new() to append a ':' colon to label text because this unnecessarily causes string translations to be updated.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5599 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,10 @@
  * plugins/classbuilder.c:
    Fix GLib warning when creating classes and no documents are open 
    (patch by Matthew Brush, thanks).
+ * plugins/classbuilder.c:
+   Undo patch change to cc_option_label_new() to append a ':' colon to 
+   label text because this unnecessarily causes string translations to 
+   be updated.
 
 
 2011-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
