Fix wrong label capitalization for Toolbar Preferences dialog tab and 2 other labels.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5601 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,9 @@
    Undo patch change to cc_option_label_new() to append a ':' colon to 
    label text because this unnecessarily causes string translations to 
    be updated.
+ * src/interface.c, geany.glade:
+   Fix wrong label capitalization for Toolbar Preferences dialog tab 
+   and 2 other labels.
 
 
 2011-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
