Move document encoding conversion with BOM support to encodings.[ch]
Adds the new function encodings_convert_to_utf8_auto(). This makes easy
to convert file data to UTF-8 in a high-level fashion, with BOM support
and everything.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5606 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-18  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/encodings.c, src/encodings.h:
+   Move document encoding conversion with BOM support to encodings.[ch] as
+   encodings_convert_to_utf8_auto().
+
+
 2011-03-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * data/templates/files/main.vala:
