Create a new undo action when inserting templates
This makes sure the user can undo the template insertion without also
undoing a previous action.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5608 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-03-19  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/callbacks.c:
+   Create a new undo action when inserting templates, making sure the user
+   can undo the template insertion without also undoing a previous action.
+
+
 2011-03-18  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/document.c, src/encodings.c, src/encodings.h:
