--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2011-03-20  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * data/filetypes.*, doc/geany.txt, doc/geany.html, src/callbacks.c,
+   src/filetypes.c, src/filetypes.h, src/templates.c:
+   Add new filetype setting "comment_single" to provide separated
+   single-line and multiline comment support. Single-line are used in
+   priority to comment code, and multiline to make template comments.
+
+
 2011-03-19  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/callbacks.c:
