--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-03-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
+          (closes #3222844)
+
+
 2011-03-15  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * zh_TW.po: Update of traditional Chinese translation.
