Allow multiple file filters to be separated by a space for consistency with Find in Files file patterns. ';' is still allowed also.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5616 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
  * src/main.c:
    Make --ft-names list filetypes alphabetically.
+ * plugins/filebrowser.c:
+   Allow multiple file filters to be separated by a space for
+   consistency with Find in Files file patterns. ';' is still
+   allowed also.
 
 
 2011-03-20  Colomban Wendling  <colomban(at)geany(dot)org>
