Fix a typo inside Slovenian translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5617 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-03-22  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * sl.po: Fix of a typo inside Slovenian translation. Thanks to Jože Klepec.
+
+
 2011-03-21  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * es.po: Update of Spanish translation. Thanks to Lucas Vieites.
