Add fixed shortcuts for VTE copy (Ctrl-Shift-C) and paste (Ctrl-Shift-V).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5623 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * plugins/filebrowser.c:
    Add history to filter entry.
+ * src/keybindings.c, src/vte.c:
+   Add fixed shortcuts for VTE copy (Ctrl-Shift-C) and paste
+   (Ctrl-Shift-V).
 
 
 2011-03-24  Colomban Wendling  <colomban(at)geany(dot)org>
