Improve usage of G_(UN)?LIKELY()
G_(UN)?LIKELY() should be only used on whole conditional expressions,
and only if the branching is very highly predictable, not if it is only
more probable.

These macros should be used with care because a wrong prediction may
be a lot worst than what a good prediction can give.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5625 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,12 @@
    src/search.c, src/toolbar.c, src/ui_utils.c, src/ui_utils.h:
    Make Shift-Enter in search dialog and toolbar search entries search
    backwards.
+ * plugins/filebrowser.c, plugins/saveactions.c, src/callbacks.c,
+   src/dialogs.c, src/document.c, src/document.h, src/editor.c,
+   src/encodings.c, src/filetypes.c, src/highlighting.c, src/log.c,
+   src/main.c, src/plugins.c, src/printing.c, src/project.c, src/search.c,
+   src/socket.c, src/toolbar.c, src/utils.c, src/utils.h:
+   Improve usage of G_LIKELY() and G_UNLIKELY() macros.
 
 
 2011-03-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
