Small code cleanups
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5629 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * data/filetypes.vala:
    Update Vala keywords (based on a patch from Matthew Brush, thanks).
+ * data/document.c:
+   Small code cleanups.
 
 
 2011-03-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
