Fix confusing terminology in Split Window plugin menu labels
Patch by Matthew Brush, thanks. Closes #2796316.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5633 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
  * plugins/splitwindow.c:
    Enable code folding in splitview window (based on a patch by Matthew
    Brush, thanks! - closes #3097780).
+   Fix confusing terminology in Split Window plugin menu labels (patch
+   by Matthew Brush - closes #2796316).
 
 
 2011-03-25  Colomban Wendling  <colomban(at)geany(dot)org>
