Don't unsplit when closing the document if we can show another one
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5634 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
    Brush, thanks! - closes #3097780).
    Fix confusing terminology in Split Window plugin menu labels (patch
    by Matthew Brush - closes #2796316).
+   Don't unsplit when closing the displayed document but rather pick the
+   new current one if any.
 
 
 2011-03-25  Colomban Wendling  <colomban(at)geany(dot)org>
