--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * de.po: Update of German translation.
+
+
 2011-03-22  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sl.po: Fix of a typo inside Slovenian translation. Thanks to Jože Klepec.
