--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * doc/geany.txt, doc/geany.html:
    Add #reading-styles-from-another-filetype subsection, based on
    patch by Matthew Brush (thanks).
+ * doc/geany.txt, doc/geany.html:
+   Add #filenames subsection for filetype definition files explaining
+   the filename extensions and special cases.
 
 
 2011-03-28  Colomban Wendling  <colomban(at)geany(dot)org>
