Add plugin_{idle_add,timeout_add,timeout_add_seconds}() to the plugin API
These functions does the same as the corresponding GLib functions but
makes sure that the added GSource will be removed when the plugin is
unloaded, preventing possible crashes.

These are only convenience functions for the plugin author not to have to
care about the case the plugin gets unloaded, he can still manually
manage hes GSources if he wants to.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5650 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2011-03-30  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/plugindata.h, src/pluginprivate.h, src/plugins.c,
+   src/pluginutils.c, src/pluginutils.h plugins/geanyfunctions.h:
+   Add plugin_idle_add(), plugin_timeout_add() and
+   plugin_timeout_add_seconds() to the plugin API. These are
+   convenience wrappers to ensure the added timeouts are properly
+   removed when unloading the plugin, preventing possible crashes.
+
+
 2011-03-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * doc/geany.txt, doc/geany.html:
