Use new plugin_idle_add(), preventing an unlikely crash
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5651 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    plugin_timeout_add_seconds() to the plugin API. These are
    convenience wrappers to ensure the added timeouts are properly
    removed when unloading the plugin, preventing possible crashes.
+ * plugins/splitwindow.c:
+   Use new plugin_idle_add(), preventing an unlikely crash.
 
 
 2011-03-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
