Fix a few Doxygen warnings
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5652 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
    removed when unloading the plugin, preventing possible crashes.
  * plugins/splitwindow.c:
    Use new plugin_idle_add(), preventing an unlikely crash.
+ * doc/pluginsymbols.c, src/sciwrappers.c:
+   Fix a few Doxygen warnings.
 
 
 2011-03-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
