--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-03-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/editor.c:
+   Use STYLE_MAX instead of 127 for editor_set_font(). This fixes a
+   crash in the Split Window plugin when changing filetype (patch by
+   Matthew Brush, thanks; fixes #3255968).
+
+
 2011-03-30  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/plugindata.h, src/pluginprivate.h, src/plugins.c,
