Fix Instant Save preferences combo box filetype order.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5655 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
  * plugins/splitwindow.c:
    Update styles when the filetype changes (based on patch by
    Matthew Brush, thanks).
+ * plugins/saveactions.c:
+   Fix Instant Save preferences combo box filetype order.
 
 
 2011-03-30  Colomban Wendling  <colomban(at)geany(dot)org>
