--- a/ChangeLog
+++ b/ChangeLog
@@ -62,11 +62,12 @@
 2011-03-26  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/sidebar.c:
-   Fix the sidebar popup menu to properly use the currently selected item
-   rather than the previous one.
-   Also change the hack used for the selection to be updated in the input
-   handlers to call the GtkTreeView's handler manually rather than doing
-   the actual job in IDLE callbacks for the TreeView's handler to have run.
+   Fix the sidebar popup menu to properly use the currently selected
+   item rather than the previous one.
+   Also change the hack used for the selection to be updated in the
+   input handlers to call the GtkTreeView's handler manually rather than
+   doing the actual job in IDLE callbacks for the TreeView's handler to
+   have run.
  * doc/geany.html, doc/geany.txt, geany.glade, src/document.c,
    src/editor.h, src/interface.c, src/interface.h, src/keyfile.c,
    src/project.c:
@@ -113,8 +114,8 @@
  * plugins/filebrowser.c, plugins/saveactions.c, src/callbacks.c,
    src/dialogs.c, src/document.c, src/document.h, src/editor.c,
    src/encodings.c, src/filetypes.c, src/highlighting.c, src/log.c,
-   src/main.c, src/plugins.c, src/printing.c, src/project.c, src/search.c,
-   src/socket.c, src/toolbar.c, src/utils.c, src/utils.h:
+   src/main.c, src/plugins.c, src/printing.c, src/project.c,
+   src/search.c, src/socket.c, src/toolbar.c, src/utils.c, src/utils.h:
    Improve usage of G_LIKELY() and G_UNLIKELY() macros.
 
 
@@ -147,15 +148,16 @@
 2011-03-19  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/callbacks.c:
-   Create a new undo action when inserting templates, making sure the user
-   can undo the template insertion without also undoing a previous action.
+   Create a new undo action when inserting templates, making sure the
+   user can undo the template insertion without also undoing a previous
+   action.
 
 
 2011-03-18  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/document.c, src/encodings.c, src/encodings.h:
-   Move document encoding conversion with BOM support to encodings.[ch] as
-   encodings_convert_to_utf8_auto().
+   Move document encoding conversion with BOM support to encodings.[ch]
+   as encodings_convert_to_utf8_auto().
  * src/templates.c:
    Properly convert template files to UTF-8 on loading, fixing encoding
    issues if templates files are not encoded in UTF-8.
@@ -246,9 +248,10 @@
 2011-03-06  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/symbols.c:
-   When sorting tags by line, also sort by scope if line is the same, avoiding
-   wrong sorting if a parent tag is on the same line than its children, and one
-   of it's children would be sorted before alphabetically (closes #3193982).
+   When sorting tags by line, also sort by scope if line is the same,
+   avoiding wrong sorting if a parent tag is on the same line than its
+   children, and one of it's children would be sorted before
+   alphabetically (closes #3193982).
 
 
 2011-03-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
@@ -273,16 +276,17 @@
  * configure.ac, wscript, makefile.win32, src/Makefile.am,
    src/makefile.win32, tagmanager/Makefile.am, tagmanager/c.c,
    tagmanager/entry.c, tagmanager/entry.h, tagmanager/fortran.c,
-   tagmanager/get.c, tagmanager/get.h, tagmanager/js.c, tagmanager/lregex.c,
-   tagmanager/makefile.win32, tagmanager/parse.c, tagmanager/read.c,
-   tagmanager/read.h, tagmanager/sort.c, tagmanager/sql.c,
-   tagmanager/strlist.c, tagmanager/mio/*:
+   tagmanager/get.c, tagmanager/get.h, tagmanager/js.c,
+   tagmanager/lregex.c, tagmanager/makefile.win32, tagmanager/parse.c,
+   tagmanager/read.c, tagmanager/read.h, tagmanager/sort.c,
+   tagmanager/sql.c, tagmanager/strlist.c, tagmanager/mio/*:
    Move most of TagManager's I/O to MIO.
  * src/document.c:
    Enable in-memory tag parsing.
- * geany.glade, src/editor.c, src/editor.h, src/interface.c, src/keyfile.c:
-   Add possibility to update symbol list in IDLE time, enabled by default
-   using a minimal delay of 250ms.
+ * geany.glade, src/editor.c, src/editor.h, src/interface.c,
+   src/keyfile.c:
+   Add possibility to update symbol list in IDLE time, enabled by
+   default using a minimal delay of 250ms.
  * src/symbols.c:
    Improve implementation of hide_empty_rows() to do all in one shot.
  * tagmanager/include/tm_tag.h, tagmanager/tm_project.c,
