Remove confusing macro CHECK_READ_SETTING().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5659 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,8 @@
    Matthew Brush, thanks).
  * plugins/saveactions.c:
    Fix Instant Save preferences combo box filetype order.
+ * plugins/filebrowser.c:
+   Remove confusing macro CHECK_READ_SETTING().
 
 
 2011-03-30  Colomban Wendling  <colomban(at)geany(dot)org>
