Don't hide directories matching hidden file extensions e.g. foo.o. Refactor with check_object().
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5663 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@
  * plugins/filebrowser.c:
    Fix optimization for filter check when pattern is '*'.
    Use foreach_strv() instead of foreach_c_array().
+ * plugins/filebrowser.c:
+   Don't hide directories matching hidden file extensions e.g. foo.o.
+   Refactor with check_object().
 
 
 2011-03-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
