--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/encodings.c:
+   Update regex used to find encodings for it to allow the encoding to
+   be quoted, adding support for XML (closes #3183506).
+
+
 2011-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * plugins/filebrowser.c:
