Better handle badly-written encoding names
Make encoding name comparison more permissive, finding names that are
very likely to refer to the same encoding.
For example, "utf8" now matches "UTF-8", and "iso8859_1" matches
"ISO-8859-1".

This makes encodings_get_idx_from_charset() and
encodings_get_from_charset() more permissive, and allow to normalize
an encoding name.
It is used to better handle user-provided encodings (e.g. one found by
a regex search) by normalizing it to the Geany name.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5666 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,12 @@
  * src/encodings.c:
    Update regex used to find encodings for it to allow the encoding to
    be quoted, adding support for XML (closes #3183506).
+ * src/encodings.c:
+   Implement charset name normalization in order to better deal with
+   badly-written encoding names (i.e. names found by regex search).
+   This also makes encodings_get_idx_from_charset() and
+   encodings_get_from_charset() more permissive regarding the passed-in
+   encoding name.
 
 
 2011-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
