Fix title capitalization.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5670 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    Rename Preferences dialog Interface subtab More -> Notebook tabs.
  * src/toolbar.c, src/dialogs.c:
    Use mimetype icon in File Properties dialog.
+ * doc/geany.txt, doc/geany.html:
+   Fix title capitalization.
 
 
 2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>
