Move Preferences dialog Toolbar tab under Interface tab.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5671 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    Use mimetype icon in File Properties dialog.
  * doc/geany.txt, doc/geany.html:
    Fix title capitalization.
+ * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
+   Move Preferences dialog Toolbar tab under Interface tab.
 
 
 2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>
