Tweak some build dialog labels: Clear -> Reset. Fix capitalization.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5672 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,10 @@
    Fix title capitalization.
  * src/interface.c, doc/geany.txt, doc/geany.html, geany.glade:
    Move Preferences dialog Toolbar tab under Interface tab.
+ * src/build.c:
+   Tweak some build dialog labels:
+   Clear -> Reset.
+   Fix capitalization.
 
 
 2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>
