Make `Send selection to` send the current line if there is no selection
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5675 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,9 @@
    information in them but only use the UTF-8 compatible part of
    ISO-8859-1 to be properly loaded as ISO-8859-1, rather than UTF-8.
    Also fix check for locale encoding.
+ * src/tools.c, doc/geany.txt, doc/geany.html:
+   Make `Send selection to` send the current line if there is no
+   selection.
 
 
 2011-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
