Improve the `Set Custom Commands` dialog
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5676 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-01  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/tools.c, doc/geany.txt, doc/geany.html:
+   Improve the `Set Custom Commands` dialog.
+
+
 2011-04-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/interface.c, src/interface.h, geany.glade:
