Make Project->Properties the last menu item so it's faster to use.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5689 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/interface.c, geany.glade:
+   Make Project->Properties the last menu item so it's faster to use.
+
+
 2011-04-03  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * scintilla/*:
