Add highlight for triple-quoted verbatims
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5697 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * scintilla/lexers/LexCPP.cxx:
    Make hightlighting of triple-quoted verbatim an option (Backport
    from Scintilla HG 3602:5536ed81a85b).
+ * src/highlighting.c:
+   Add highlight for triple-quoted verbatims.
 
 
 2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
