Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5698 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,9 @@
    from Scintilla HG 3602:5536ed81a85b).
  * src/highlighting.c:
    Add highlight for triple-quoted verbatims.
+ * data/filetypes.c, data/filetypes.vala, data/filetypes.Genie.conf,
+   data/filetypes.Scala.conf:
+   Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes.
 
 
 2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
